tree-sitter-sdif/test/corpus/core.txt
==================
Core agent-facing document
==================
@sdif 1.0
title "Agent friendly plan"
milestones[id,status,gate]:
  R1	done	validate-syntax
rel:
  R1 blocks R2
rules:
  require evidence when status done
notes"""
Use SDIF AI directly for agent context.
"""
---
(source_file
  (directive (identifier) (atom))
  (field (identifier) (string))
  (table
    (table_header (identifier) (column (identifier)) (column (identifier)) (column (identifier)))
    (table_row))
  (relation_block (relation_row))
  (rules_block (rule_row))
  (narrative_block (identifier) (narrative_text)))

==================
Compact SDIF AI table
==================
@sdif.ai 1.0
alias[k=kind,st=status]
checks[id,value$]:
C1	null
C2	42
---
(source_file
  (directive (identifier) (atom))
  (alias_header (alias_entry (identifier) (identifier)) (alias_entry (identifier) (identifier)))
  (table
    (table_header (identifier) (column (identifier)) (column (identifier)))
    (table_row)
    (table_row)))
